--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcana/auth": "^1.0.2",
+    "@arcana/auth-react": "^0.0.3",
     "@ramonak/react-progress-bar": "^5.0.3",
+    "ethers": "^5.6.4",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
