--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ramonak/react-progress-bar": "^5.0.3",
+    "@badrap/bar-of-progress": "^5.0.3",
+    "axios": "^1.3.4",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
