--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "icc",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@arcana/auth": "^1.0.2",
-    "@arcana/auth-react": "^0.0.3",
-    "@badrap/bar-of-progress": "^0.2.2",
-    "@ramonak/react-progress-bar": "^5.0.3",
-    "axios": "^1.3.4",
-    "ethers": "^5.6.4",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "web3modal": "^1.9.12"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "icc",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@arcana/auth": "^1.0.2",
+		"@arcana/auth-react": "^0.0.3",
+		"@badrap/bar-of-progress": "^0.2.2",
+		"@ramonak/react-progress-bar": "^5.0.3",
+		"axios": "^1.3.4",
+		"ethers": "^5.6.4",
+		"next": "13.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.7.1",
+		"react-nice-avatar": "^1.3.1",
+		"web3modal": "^1.9.12"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.13",
+		"eslint": "8.34.0",
+		"eslint-config-next": "13.2.1",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.7"
+	}
 }
