--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
 		"react-nice-avatar": "^1.3.1",
+		"react-qr-code": "^2.0.11",
 		"web3modal": "^1.9.12"
 	},
 	"devDependencies": {
